# slow-fast-postgres-insertions

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/: customers.sql  generate_data.py  main.py  timer.py
