[tool.poetry]
name = "slow-fast-postgres-insertions"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "slow_fast_postgres_insertions"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg = {extras = ["binary"], version = "^3.2.3"}
faker = "^30.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
